tests/NormalTests/paczka2/big_fuzzy/20589502.err
Error in line 5: wgeN4l S935 81,0
Error in line 4: S935 S71 94,8
Error in line 18: q9BB0 S699 -1,6
Error in line 17: q9BB0 S699 19,8
Error in line 31: q9BB0 S480 21,32
Error in line 20: q9BB0 S71 45,5
Error in line 35: hIyhDT1eL S699 138,7
Error in line 42: hIyhDT1eL S935 65,6
Error in line 52: wgeN4l S71 60,9
Error in line 48: q9BB0 S71 2,9
Error in line 59: LYP S935 -4,5
Error in line 55: q9BB0 S480 40,1
Error in line 61: q9BB0 S71 78,6
Error in line 72: q9BB0 S699 87,34
Error in line 45: LYP S935 70,2
Error in line 71: S935 S71 94,3
Error in line 108: plXTaqXeTo S699 67,6
Error in line 126: q9BB0 S935 64,1
Error in line 131: q9BB0 S935 74,8
Error in line 125: plXTaqXeTo S699 16,4
Error in line 136: hIyhDT1eL S699 33,7
Error in line 123: LYP S699 54,3
Error in line 154: wgeN4l S71 32,2
Error in line 156: wgeN4l S480 76,9
Error in line 144: plXTaqXeTo S71 65,9
Error in line 167: S935 S935 19,6
Error in line 178: hIyhDT1eL S699 34,7
Error in line 187: PT1auvI4E S699 305,05
Error in line 189: LYP S480 54,2
Error in line 177: PT1auvI4E S699 62,1
Error in line 198: hIyhDT1eL S71 89,6
Error in line 200: hIyhDT1eL S480 35,1
Error in line 216: plXTaqXeTo S480 14,5
Error in line 211: wgeN4l S71 99,3
Error in line 210: S935 S699 54,8
Error in line 231: PT1auvI4E S699 43,5
Error in line 219: wgeN4l S699 93,4
Error in line 246: hIyhDT1eL S935 87,5
